prevent logo stretching

--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -336,6 +336,7 @@ hr {
 
 .logo-medwatch {
   width: 160px !important;
+  height: auto !important;
 }
 
 
